# agent-hive

./: .gitignore  CLAUDE.md  README.md  broker.ts  cli.ts  index.ts  package.json  server.ts
.github/workflows/: build.yml
bridge/: Cargo.toml
bridge/src/: client.rs  gateway.rs  main.rs  manager.rs  spawn.rs  stats.rs
coworker/: Cargo.toml
coworker/src/: main.rs
master-mind/: Cargo.toml
master-mind/src/: main.rs
shared/: auth.ts  types.ts
ui/: app.bundle.js  app.css  app.tsx  index.html  roles.ts
