[package]
name = "master-mind"
version = "0.1.0"
edition = "2021"
description = "Master Mind MCP server — controls the agent-hive network"

[dependencies]
rmcp = { version = "1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
hostname = "0.4"
dirs = "6"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
